# mycplusdemo

./: .gitignore  CMakeLists.txt
abort_1/src/: main.cpp  main2.cpp
array_demo1/: CMakeLists.txt
array_demo1/demo1/: main.cpp  main2.cpp
array_demo1/src/: CMakeLists.txt  main.cpp  redme.md
construction/: CMakeLists.txt
construction/demo1/: CMakeLists.txt  c1.cpp  c2.cpp  main.cpp
current_path/: CMakeLists.txt  main.cpp
http_request/: .gitignore  CMakeLists.txt  conanfile.txt  r.md
http_request/cmake/: cpr.cmake
http_request/src/: CMakeLists.txt  config.yaml  main.cpp
http_request/src/config/: config.cpp  config.h
http_request/src/utils/: log.cpp  log.h
static_value/demo1/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  main.cpp
string_bad/: CMakeLists.txt  main.cpp  string_bad_1.cpp  string_bad_1.h
string_demo/demo1/: CMakeLists.txt  s1.cpp
struct_template/: CMakeLists.txt  main.cpp
yaml_demo/: CMakeLists.txt  config.yaml  main.cpp
